# fht-jax

./: CMakeLists.txt  LICENSE  README.md  setup.py
src/: fwht.py  fwht_test.py  hadamard_cuda.cpp  hadamard_cuda_kernel.cu
